--- a/_sass/_migrated-vendor.scss
+++ b/_sass/_migrated-vendor.scss
@@ -206,14 +206,14 @@
 // .fa-th-list:before {
 //   content: "\f00b";
 // }
-// .fa-check:before {
-//   content: "\f00c";
-// }
-// .fa-remove:before,
-// .fa-close:before,
-// .fa-times:before {
-//   content: "\f00d";
-// }
+.fa-check:before {
+  content: "\f00c";
+}
+.fa-remove:before,
+.fa-close:before,
+.fa-times:before {
+  content: "\f00d";
+}
 // .fa-search-plus:before {
 //   content: "\f00e";
 // }
@@ -270,9 +270,9 @@
 // .fa-list-alt:before {
 //   content: "\f022";
 // }
-// .fa-lock:before {
-//   content: "\f023";
-// }
+.fa-lock:before {
+  content: "\f023";
+}
 .fa-flag:before {
   content: "\f024";
 }
@@ -357,9 +357,9 @@
 // .fa-picture-o:before {
 //   content: "\f03e";
 // }
-// .fa-pencil:before {
-//   content: "\f040";
-// }
+.fa-pencil:before {
+  content: "\f040";
+}
 // .fa-map-marker:before {
 //   content: "\f041";
 // }
@@ -581,9 +581,9 @@
 // .fa-linkedin-square:before {
 //   content: "\f08c";
 // }
-// .fa-thumb-tack:before {
-//   content: "\f08d";
-// }
+.fa-thumb-tack:before {
+  content: "\f08d";
+}
 // .fa-external-link:before {
 //   content: "\f08e";
 // }
@@ -1066,9 +1066,9 @@
 // .fa-bullseye:before {
 //   content: "\f140";
 // }
-// .fa-ellipsis-h:before {
-//   content: "\f141";
-// }
+.fa-ellipsis-h:before {
+  content: "\f141";
+}
 // .fa-ellipsis-v:before {
 //   content: "\f142";
 // }
