--- a/_sass/_migrated-vendor.scss
+++ b/_sass/_migrated-vendor.scss
@@ -898,9 +898,9 @@
 // .fa-angle-left:before {
 //   content: "\f104";
 // }
-// .fa-angle-right:before {
-//   content: "\f105";
-// }
+.fa-angle-right:before {
+  content: "\f105";
+}
 // .fa-angle-up:before {
 //   content: "\f106";
 // }
