--- a/_sass/_migrated-forum.scss
+++ b/_sass/_migrated-forum.scss
@@ -150,6 +150,38 @@
   background: white;
   border: 1px solid #ccc;
   border-radius: 2px;
+
+  .search-alert {
+    -webkit-transition: none;
+    -moz-transition: none;
+    transition: none;
+    padding: 10px 11px 10px 18px;
+    background-color: #161616;
+  }
+  .search-alert-content {
+    width: 70%;
+    display: inline-block;
+    vertical-align: middle;
+
+    .message {
+      font-size: 0.75rem;
+      color: #fff;
+    }
+  }
+
+  .search-alert-controls {
+    text-align: right;
+    width: 28%;
+
+    .control {
+      -webkit-transition: none;
+      -moz-transition: none;
+      transition: none;
+      padding: 5px 10px;
+      color: #fff;
+      font-size: 0.875rem;
+    }
+  }
 }
 
 .forum-nav-browse-menu-wrapper {
@@ -711,8 +743,6 @@ section.discussion::after {
 .forum-nav-sort {
   text-align: right;
   box-sizing: border-box;
-}
-.forum-nav-sort {
   float: right;
 }
 .forum-nav-filter-main-control,
