Update recommended content
- Add comment

--- a/_includes/take5/recommended-content.html
+++ b/_includes/take5/recommended-content.html
@@ -69,6 +69,10 @@ TODO: rather than hard-coding values here, a more flexible method would be to cr
 {%- assign tutorial2 = site.data.take5.[rec2] -%}
 {%- assign tutorial3 = site.data.take5.[rec3] -%}
 
+{%- comment -%}
+Placeholder logic for limited design-related recommended content
+{%- endcomment -%}
+
 {%- if tutorial1.topic == "Design" -%}
   {%- assign tutorial1 = site.data.take5.[rec1] -%}
   {%- assign tutorial2 = site.data.take5.GYM-5011 -%}
