--- a/css/main.scss
+++ b/css/main.scss
@@ -174,6 +174,7 @@ body.view-in-course {
   margin-top: 20px;
   margin-bottom: 20px;
   padding: 1em 2.2em 2.2em;
+  overflow: hidden;
 
   ul {
     padding-left: 0;
