--- a/_sass/_migrated-main.scss
+++ b/_sass/_migrated-main.scss
@@ -21404,7 +21404,7 @@ section.updates {
       border-top: 1px solid #ddd;
       margin-top: 1.8em;
 
-      h2, p {
+      h2 {
         font: 900 1em/1.3 $gym-font-stack;
         color: #222;
         letter-spacing: 0.06em;
